js/js.translator/testData/incremental/invalidation/constValMoveBetweenModules/lib1/l1.1.kt
package sample

fun fromLib1(): Int = -1
